<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context=".ui.user.RegisterUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:src="@drawable/ecommerce" />

        <TextView
            android:id="@+id/logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/playball"
            android:text="Beli-Beli Yuk"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Registrasi"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--username-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLayout"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:layout_below="@id/emailLayout"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Pass-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneLayout"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Pass-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passLayout"
                android:layout_marginTop="10dp"
                android:hint="@string/comfirm_password"
                android:textColorHint="@color/gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--button-->
            <Button
                android:id="@+id/RegisBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passLayout2"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:text="@string/register" />

            <!--create acount-->
            <TextView
                android:id="@+id/backLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/RegisBtn"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:textSize="17dp"
                android:text="@string/punya"
                android:textColor="@color/black" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>