<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context=".PilihanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:src="@drawable/ecommerce" />

        <TextView
            android:id="@+id/logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Beli-Beli Yuk"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/playball"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Login Sebagai"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--button-->
            <Button
                android:id="@+id/adminBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:text="@string/admin"
                android:textSize="20sp" />

            <Button
                android:id="@+id/staffBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/adminBtn"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:text="@string/staff"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/customerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/staffBtn"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button"
                android:text="@string/customer"
                android:textSize="20sp"/>



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>